--- a/Portfolio/portfolio.main/Layout/NavMenu.razor
+++ b/Portfolio/portfolio.main/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">portfolio.main</a>
+        <a class="navbar-brand fw-bold" href="">Frednel Jean-Joseph</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,13 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="projects">
+                <span class="bi bi-folder-fill-nav-menu" aria-hidden="true"></span> Projects
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="experience">
+                <span class="bi bi-briefcase-fill-nav-menu" aria-hidden="true"></span> Experience
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="contact">
+                <span class="bi bi-envelope-fill-nav-menu" aria-hidden="true"></span> Contact
             </NavLink>
         </div>
     </nav>
