manually configured deployement. now setting up cicd

--- a/Portfolio/Portfolio.Main/Pages/Home.razor
+++ b/Portfolio/Portfolio.Main/Pages/Home.razor
@@ -15,7 +15,7 @@
                     <span class="badge bg-light text-dark fs-6 px-3 py-2">Angular</span>
                     <span class="badge bg-light text-dark fs-6 px-3 py-2">React</span>
                     <span class="badge bg-light text-dark fs-6 px-3 py-2">SQL Server</span>
-                    <span class="badge bg-light text-dark fs-6 px-3 py-2">Azure</span>
+                    <span class="badge bg-light text-dark fs-6 px-3 py-2">Azure cloud</span>
                 </div>
             </div>
             <div class="col-md-4 text-center">
