--- a/Portfolio/portfolio.main/Layout/NavMenu.razor
+++ b/Portfolio/portfolio.main/Layout/NavMenu.razor
@@ -2,9 +2,7 @@
     <!-- Profile Header -->
     <div class="profile-header">
         <div class="profile-avatar">
-            <img src="https://mrjeanjoseph.github.io/src/img/portrait2.jpg" 
-                 alt="Frednel Jean-Joseph" 
-                 class="avatar-img">
+            <img src="/assets/profile-img.jpeg" alt="Frednel Jean-Joseph" class="avatar-img">
         </div>
         <div class="profile-info">
             <h6 class="profile-name">Frednel Jean-Joseph</h6>
